share/web-serve/22-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: practice-web
  labels:
    app: practice-web
spec:
  selector:
    app: practice-web
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
